Fixed errors with color and text

--- a/src/assets/_categories.scss
+++ b/src/assets/_categories.scss
@@ -5,6 +5,10 @@
   text-align: center;
   margin-top: 35px;
 
+  .green{
+    color: #00897B;
+  }
+
   .briefcase {
     border: 1px solid lightgreen;
     padding: 15px;
