--- a/src/assets/_settings.scss
+++ b/src/assets/_settings.scss
@@ -2,9 +2,7 @@ h3 {
   margin-bottom: 50px;
 }
 
-p {
-  margin: 0;
-}
+
 
 .icon-right {
   margin-left: 1100px;
@@ -17,6 +15,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+
 }
 
 .info {
@@ -50,6 +49,7 @@ p {
   flex-direction: column;
   font-size: 19px;
   color: #212121;
+  cursor: pointer;
 }
 
 .icon {
